# Calendar

./: .env.example  .gitignore  Dockerfile  INSTALLATION.md  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  try.py
.github/workflows/: testing.yml
app/: Dockerfile  config.py  main.py
app/auth/: auth.py  manager.py
app/core/: email_sender.py  routers_includer.py
app/core/routers/: account_router.py
app/db/: connector.py  redis_storage.py
app/db/cache_storage/: cache_redis.py  cache_repo.py
app/email_broker/: email_broker_repo.py  smtp_broker.py
app/exceptions/: repository.py
app/models/: Note.py  User.py  note.py  user.py
app/schemas/: email.py  note.py  user.py
app/utils/: exception_handlers.py  singleton.py  time_manager.py
auth/: auth.py  database.py  manager.py  schemas.py
core/routers/: account_router.py
database/: database.py
db/: connector.py  database.py
db/repositories/: note.py  user.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.jsx  main.jsx
migrations/: env.py
migrations/versions/: 1f58dca2c05a_database_creation.py  5504c23b6466_database_creation.py  b1ef69dc3fe0_database_creation.py  d3fbaa4d3b9e_database_creation.py  dff7ca410191_database_creation.py  e69c227f7598_database_creation.py  feff05ad8c85_database_creation.py
models/: User.py  models.py
schemas/: auth.py  note.py  schemas.py  user.py
templates/: account.html  first_page.html  private.html  sign_in.html  sign_up.html
utils/: EmailSender.py
(+14 files in other folders)
