[tool.poetry]
name = "Calendar"
version = "0.1.0"
description = "Calendar. To-Do notificator"
authors = ["Pavel Klyukin <klukin0202@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
uvicorn = "^0.32.0"
alembic = "^1.14.0"
fastapi = "^0.115.4"
fastapi-users = { extras = ["sqlalchemy"], version = "^14.0.0" }
fastapi-login = "^1.10.2"
python-dotenv = "^1.0.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.4"
asyncpg = "^0.30.0"
python-decouple = "^3.8"
pyjwt = "^2.9.0"
pydantic = "^2.9.2"
passlib = "^1.7.4"
apscheduler = "^3.10.4"
tzlocal = "^5.2"
aiosmtplib = "^3.0.2"
redis = "^5.2.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
